Fix spelling error in about page and add startup script for Railway migrations

--- a/advisor/templates/advisor/about.html
+++ b/advisor/templates/advisor/about.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="text-center">
                         <h4 class="text-xl font-semibold text-gray-900 dark:text-gray-100">Akshit Malik</h4>
-                        <p class="text-md text-gray-600 dark:text-gray-400">Co-Developer & Feature Specialistr</p>
+                        <p class="text-md text-gray-600 dark:text-gray-400">Co-Developer & Feature Specialist</p>
                     </div>
                 </div>
             </div>
